test/1.2/errors/T_ESYNTAX_18.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

// Brackets are required around input parameters for nothrow methods
/// ERROR ESYNTAX
method m -> () nothrow {
}
